# CRISP

./: -  .gitignore  CRISP_database.dbml  LICENSE  README.md  compose.yaml  compose_published.yaml  crisp.sh  dump_command_to_run.txt  generate_restore_point.sh  package-lock.json  package.json  restore_db.sh  run_docker.sh
backend/: Dockerfile  api.py  package-lock.json  package.json  plotter.py  pyproject.toml  video_script.py
backend/database/dev/scripts/: docker-init.sql.sh
backend/database/dev/sql/: 00-password-fn.sql
backend/docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
backend/docs/source/: conf.py  index.rst
backend/src/: automated_roi.py  calibration_functions.py  camera_functions.py  connection_functions.py  create_homographies.py  distortion_correction.py  edge_detection_functions.py  fitting_functions.py  gain_automation.py  homography_errors.py  homography_pinpointing.py  image_processing.py  modified_pybragg.py  network_functions.py  noise_plotter.py  obj_point_orientation_testing.py  pi_config.json  scintillation_light_pinpointing.py  single_camera_analysis.py  uncertainty_functions.py  video_script.py  viewing_functions.py
backend/src/classes/: Camera.py  Pi.py  SSHClientWrapper.py
backend/src/database/: database.py  models.py
backend/src/routers/: beam_run.py  camera.py  camera_analysis.py  camera_analysis_plot.py  camera_settings.py  experiment.py  homography.py  homography_calibration.py  photo.py  settings.py  setup.py  setup_camera.py  video.py
(+195 files in other folders)
