[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["LewisDean22 <lewisdean22@outlook.com>"]
readme = "README.md"
packages = [{include = "backend", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11" # Was ^3.10 before sphinx was added
uvicorn = "^0.34.0"
paramiko = "^3.5.0"
sqlmodel = "^0.0.22"
numpy = "^2.2.2"
fastapi = "^0.115.8"
pydantic = "^2.10.6"
opencv-python = "^4.11.0.86"
psycopg2-binary = "^2.9.10"
pytz = "^2025.1"
matplotlib = "^3.10.0"
scipy = "^1.15.2"

[tool.poetry.dev-dependencies]
watchfiles = "^1.0.4"

# [tool.poetry.group.dev.dependencies] #TODO COMMENTED TO WORK FOR ROBIN 30/03/25
# sphinx = "^8.2.3"
# sphinx-autodoc-typehints = "^3.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
